// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProgressBar /> should initially render progress bar 1`] = `
<div
  style={
    Object {
      "left": "0",
      "opacity": "0",
      "position": "fixed",
      "top": "0",
      "transition": "all 500mx ease-in-out",
      "visibility": "hidden",
      "width": "100%",
      "zIndex": "-10",
    }
  }
>
  <div
    className={undefined}
    style={
      Object {
        "background": "#77b6ff",
        "boxShadow": "0 0 10px rgba(119, 182, 255, 0.7)",
        "height": "2px",
        "opacity": "1",
        "transition": "all 400ms ease",
        "width": "0",
      }
    }
  />
</div>
`;

exports[`<ProgressBar /> should render progress bar using passed color 1`] = `
<div
  style={
    Object {
      "left": "0",
      "opacity": "0",
      "position": "fixed",
      "top": "0",
      "transition": "all 500mx ease-in-out",
      "visibility": "hidden",
      "width": "100%",
      "zIndex": "-10",
    }
  }
>
  <div
    className={undefined}
    style={
      Object {
        "background": "#db7093",
        "boxShadow": "0 0 10px rgba(119, 182, 255, 0.7)",
        "height": "2px",
        "opacity": "1",
        "transition": "all 400ms ease",
        "width": "0",
      }
    }
  />
</div>
`;

exports[`<ProgressBar /> should render progress bar with className 1`] = `
<div
  style={
    Object {
      "left": "0",
      "opacity": "0",
      "position": "fixed",
      "top": "0",
      "transition": "all 500mx ease-in-out",
      "visibility": "hidden",
      "width": "100%",
      "zIndex": "-10",
    }
  }
>
  <div
    className="my-custom-classname"
    style={
      Object {
        "background": "#77b6ff",
        "boxShadow": "0 0 10px rgba(119, 182, 255, 0.7)",
        "height": "2px",
        "opacity": "1",
        "transition": "all 400ms ease",
        "width": "0",
      }
    }
  />
</div>
`;

exports[`<ProgressBar /> should render progress bar with color 1`] = `
<div
  style={
    Object {
      "left": "0",
      "opacity": "0",
      "position": "fixed",
      "top": "0",
      "transition": "all 500mx ease-in-out",
      "visibility": "hidden",
      "width": "100%",
      "zIndex": "-10",
    }
  }
>
  <div
    className={undefined}
    style={
      Object {
        "background": "red",
        "boxShadow": "0 0 10px rgba(119, 182, 255, 0.7)",
        "height": "2px",
        "opacity": "1",
        "transition": "all 400ms ease",
        "width": "0",
      }
    }
  />
</div>
`;

exports[`<ProgressBar /> should render progress bar with styles 1`] = `
<div
  style={
    Object {
      "left": "0",
      "opacity": "0",
      "position": "fixed",
      "top": "0",
      "transition": "all 500mx ease-in-out",
      "visibility": "hidden",
      "width": "100%",
      "zIndex": "-10",
    }
  }
>
  <div
    className={undefined}
    style={
      Object {
        "background": "#77b6ff",
        "boxShadow": "0 0 10px rgba(119, 182, 255, 0.7)",
        "height": "5px",
        "opacity": "1",
        "transition": "all 400ms ease",
        "width": "0",
      }
    }
  />
</div>
`;
